Fixed task list button alignment

--- a/client/layout/main/main.less
+++ b/client/layout/main/main.less
@@ -105,9 +105,6 @@ ul.pagination {
     color: inherit;
   }
 }
-.list-pagination{
-    margin-top: -20px;
-}
 
 .list-header {
     margin-top: 10px;
